[package]
name = "sotck_watch"
version = "0.1.0"
authors = ["litttley <617914118@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "mysql" ]
postgres = [ "sqlx/postgres"]
sqlite = [ "sqlx/sqlite"]
mysql = [ "sqlx/mysql"]

[dependencies.sqlx]
version = "0.3.5"
default-features = false
features = [ "runtime-tokio", "macros", "chrono", "bigdecimal", "uuid", "json" ]

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
futures={version="0.3.4"}
tokio = { version = "0.2.11", features = ["full"] }
#lettre = "0.9.2"
lettre = {version = "0.9.2",features=["smtp-transport"]}
lettre_email = "0.9.2"
chrono = "0.4"
clokwerk="0.3.2"
lazy_static = "1.4.0"
#环境变量获取
dotenv = "0.15"
bigdecimal = { version = "0.1.2", features = ["serde"] }
async_once = { version = "0.1.0" , features = ["tokio"] }
colored = "2"